--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@nuxtjs/auth": "4.9.1",
     "@nuxtjs/axios": "5.11.0",
     "axios": "^0.19.0",
+    "body-parser": "1.19.0",
     "express": "^4.15.3",
     "nuxt": "^2.2.12"
   },
