--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "axios": "^0.19.0",
     "body-parser": "1.19.0",
     "express": "^4.15.3",
-    "nuxt": "^2.2.12"
+    "nuxt": "^2.2.12",
+    "vuex-shared-mutations": "^1.0.2"
   },
   "scripts": {
     "dev": "nuxt",
